fixed radio button spacing

--- a/src/assets/sass/utils/_global.scss
+++ b/src/assets/sass/utils/_global.scss
@@ -173,6 +173,7 @@ code {
 	width: 100% !important;
 	> .filter-radio {
 		padding: 0 !important;
+		margin-right: 5px;
 		svg {
 			height: 2.2vh;
 			width: 2.2vh;
